# ohsome-qgis-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  config.yml  metadata.txt  ohsome_plugin.py  ohsome_plugin_dialog.py  ohsome_plugin_dialog_base.ui  ohsome_plugin_tool.py  pb_tool.cfg  plugin_upload.py  pyproject.toml  qgis-private-release.xml  requirements.txt  resources.qrc
.github/workflows/: ci-tests.yml
ORStools/: ORStoolsPlugin.py  __init__.py
ORStools/common/: __init__.py  client.py  directions_core.py  isochrones_core.py
ORStools/gui/: ORStoolsDialog.py  ORStoolsDialogConfig.py  ORStoolsDialogConfigUI.py  ORStoolsDialogUI.py  directions_gui.py
ORStools/help/: algorithm_isochrone_layer.help  algorithm_isochrone_point.help
ORStools/proc/: __init__.py  directions_lines_proc.py  directions_points_layer_proc.py  directions_points_layers_proc.py  isochrones_layer_proc.py  isochrones_point_proc.py  matrix_proc.py  provider.py
ORStools/utils/: __init__.py  configmanager.py  convert.py  exceptions.py  logger.py  maptools.py  transform.py
Ohsome/: OhsomePlugin.py  __init__.py
Ohsome/common/: __init__.py  data_extraction.py  (+1 more)
OhsomeQgis/: OhsomeQgisPlugin.py  __init__.py  config.yml  metadata.txt
common/: __init__.py  client.py  data_extraction.py  exceptions.py  response.py  utils.py
ohsomeTools/: OhsomeQgisPlugin.py  OhsomeToolsPlugin.py  __init__.py  config.yml  metadata.txt
scripts/: resource_cleaner.sh
test/: test_ohsome_plugin_dialog.py  test_resources.py
utils/: configmanager.py  exceptions.py
(+95 files in other folders)
