[tool.poetry]
name = "ohsomeplugin"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
PyQt5 = "^5.15.4"
pb-tool = "^3.1.0"
requests = "^2.25.1"
ohsome = "^0.1.0-rc.0"
resources = "^0.0.1"
PyYAML = "^5.4.1"
pydevd = "^2.4.1"
osgeo = "^0.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
PyQt5-stubs = "^5.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
